# hildon-plugins-notify-sv

./: Makefile  Makefile.am  alarm-clock.c  alarm-clock.h  com.nokia.NsvDecoder.service.in  configure.ac  hildon-plugins-notify-sv.pc.in  message-events.h  nsv-decoder-service.c  nsv-decoder-service.xml  nsv-decoder-task.c  nsv-decoder-task.h  nsv-decoder.c  nsv-playback.c  nsv-playback.h  nsv-plugin.c  nsv-plugin.h  nsv-policy.c  nsv-policy.h  nsv-private.h  nsv-profile-marshal.list  nsv-profile.c  nsv-profile.h  nsv-pulse-context.h  nsv-system-proxy.c  nsv-system-proxy.h  nsv-util.c  nsv.h  ringtone.c  ringtone.h  system-events.c  system-events.h
debian/: changelog  control  hildon-plugins-notify-sv-dev.install  hildon-plugins-notify-sv.install  hildon-plugins-notify-sv.links  rules
lib/: Makefile.am  alarm-calendar.c  alarm-calendar.h  alarm-clock.c  message-events.c  nsv-decoder.h  nsv-notification.c  nsv-notification.h  nsv-playback.c  nsv-plugin.c  nsv-plugin.h  nsv-policy.c  nsv-profile.c  nsv-profile.h  nsv-pulse-context.c  nsv-system-proxy.c  nsv-util.c  nsv-util.h  nsv.c  ringtone.c  system-events.c
src/: Makefile.am  nsv-decoder-service.c  nsv-decoder-task.c
